// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.java.gradle.header
  </h4>
  <InstanceMessage
    message="onboarding.analysis.java.gradle.text.1"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    snippet="plugins {
  id \\"org.sonarqube\\" version \\"2.7\\"
}"
  />
  <p
    className="spacer-top spacer-bottom markdown"
  >
    onboarding.analysis.java.gradle.text.2
  </p>
  <CodeSnippet
    snippet={
      Array [
        "./gradlew sonarqube",
        undefined,
        undefined,
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.docs"
      id="onboarding.analysis.docs"
      values={
        Object {
          "link": <a
            href="http://redirect.sonarsource.com/doc/gradle.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.analysis.java.gradle.docs_link
          </a>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top markdown"
  >
    onboarding.analysis.browse_url_after_analysis
  </p>
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.java.gradle.header
  </h4>
  <InstanceMessage
    message="onboarding.analysis.java.gradle.text.1"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    snippet="plugins {
  id \\"org.sonarqube\\" version \\"2.7\\"
}"
  />
  <p
    className="spacer-top spacer-bottom markdown"
  >
    onboarding.analysis.java.gradle.text.2
  </p>
  <CodeSnippet
    snippet={
      Array [
        "./gradlew sonarqube",
        undefined,
        "-Dsonar.organization=organization",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.docs"
      id="onboarding.analysis.docs"
      values={
        Object {
          "link": <a
            href="http://redirect.sonarsource.com/doc/gradle.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.analysis.java.gradle.docs_link
          </a>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top markdown"
  >
    onboarding.analysis.browse_url_after_analysis
  </p>
</div>
`;

exports[`renders with projectKey 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.java.gradle.header
  </h4>
  <InstanceMessage
    message="onboarding.analysis.java.gradle.text.1"
  >
    <Component />
  </InstanceMessage>
  <CodeSnippet
    snippet="plugins {
  id \\"org.sonarqube\\" version \\"2.7\\"
}"
  />
  <p
    className="spacer-top spacer-bottom markdown"
  >
    onboarding.analysis.java.gradle.text.2
  </p>
  <CodeSnippet
    snippet={
      Array [
        "./gradlew sonarqube",
        "-Dsonar.projectKey=foo",
        "-Dsonar.organization=organization",
        "-Dsonar.host.url=host",
        "-Dsonar.login=token",
      ]
    }
  />
  <p
    className="big-spacer-top markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.docs"
      id="onboarding.analysis.docs"
      values={
        Object {
          "link": <a
            href="http://redirect.sonarsource.com/doc/gradle.html"
            rel="noopener noreferrer"
            target="_blank"
          >
            onboarding.analysis.java.gradle.docs_link
          </a>,
        }
      }
    />
  </p>
  <p
    className="big-spacer-top markdown"
  >
    onboarding.analysis.auto_refresh_after_analysis
  </p>
</div>
`;
